Front-End | Fix Authentification by using JWT authentication (STATELESS)